// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesTableTest With issue filing support 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <mock-failedinstancessection
        cardselectionmessagecreator="[object Object]"
        cardsviewdata="[object Object]"
        cardsviewstoredata="[object Object]"
        deps="[object Object]"
        narrowmodestatus="[object Object]"
        scanmetadata="[object Object]"
        sectionheadinglevel="2"
        shouldalertfailurescount="true"
        userconfigurationstoredata="[object Object]"
      />
      <mock-issuefilingdialog
        isopen="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest automated checks disabled 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <mock-failedinstancessection
        cardselectionmessagecreator="[object Object]"
        cardsviewdata="[object Object]"
        cardsviewstoredata="[object Object]"
        deps="[object Object]"
        narrowmodestatus="[object Object]"
        scanmetadata="[object Object]"
        sectionheadinglevel="2"
        shouldalertfailurescount="true"
        userconfigurationstoredata="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest includes subtitle if specified 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableSubtitle"
    >
      test subtitle text
    </div>
    <mock-scanningspinner
      isspinning="true"
      label="Loading..."
    />
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest not scanning, issuesEnabled is true 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <mock-failedinstancessection
        cardselectionmessagecreator="[object Object]"
        cardsviewdata="[object Object]"
        cardsviewstoredata="[object Object]"
        deps="[object Object]"
        narrowmodestatus="[object Object]"
        scanmetadata="[object Object]"
        sectionheadinglevel="2"
        shouldalertfailurescount="true"
        userconfigurationstoredata="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest spinner for scanning state 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <mock-scanningspinner
        isspinning="true"
        label="Scanning..."
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest spinner, issuesEnabled == null 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <mock-scanningspinner
      isspinning="true"
      label="Loading..."
    />
  </div>
</DocumentFragment>
`;
